--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <div>
         <ul>
             <li><a href="files/sample1.txt">Sample 1</a>    : Short one-liner sample file</li>
-            <li><a href="files/sample1.txt">Sample 2</a>    :   </li>
-            <li><a href="files/sample1.txt">Sample 3</a>    :   </li>
-            <li><a href="files/sample1.txt">Sample 4</a>    :   </li>
-            <li><a href="files/sample1.txt">Sample 5</a>    :   </li>
-            <li><a href="files/sample1.txt">Sample 6</a>    :   </li>
-            <li><a href="files/sample1.txt">Sample 7</a>    :   </li>
-            <li><a href="files/sample1.txt">Sample 8</a>    :   </li>
-            <li><a href="files/sample1.txt">Sample 9</a>    :   </li>
-            <li><a href="files/sample1.txt">Sample 10</a>   :  </li>
+            <li><a href="files/sample2.txt">Sample 2</a>    : Manually generated Lorem Ipsum text -exactly 100 words </li>
+            <li><a href="files/sample3.txt">Sample 3</a>    : Empty file </li>
+            <li><a href="files/sample4.txt">Sample 4</a>    : Punction & Symbols  </li>
+            <li><a href="files/sample5.txt">Sample 5</a>    : Hypenated words  </li>
+            <li><a href="files/sample6.txt">Sample 6</a>    :   </li>
+            <li><a href="files/sample7.txt">Sample 7</a>    : Formatted numbers  </li>
+            <li><a href="http://janelwashere.com/files/bible_daily.txt">Sample 8</a>    : Large text set - Bible </li>
+            <li><a href="files/sample9.txt">Sample 9</a>    :   </li>
+            <li><a href="files/sample10.txt">Sample 10</a>   :  </li>
           </ul> 
     </div>
     
